--- a/1_Installation/01_Test12345.markdown
+++ b/1_Installation/01_Test12345.markdown
@@ -1,3 +1,5 @@
-###Index file###
+#Level 1 formatting##
+##level 2 formatting##
+###Level 3 formatting###
 
 This is the first text of the index file
